--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,6 @@ p {
 a {
   color: #555;
   text-decoration: none;
-  border-bottom: 1px solid #999;
 }
 a:hover {
   color: #222;
@@ -106,6 +105,9 @@ a:hover {
 }
 ul {
   list-style: none;
+}
+ul, ol, li {
+    list-style: none;
 }
 blockquote {
   margin: 0;
@@ -394,7 +396,7 @@ body {
   }
 }
 .footer {
-  position: absolute;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -1673,27 +1675,7 @@ body {
   display: inline;
   content: ") ";
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 20px 0 10px;
-}
-p {
-  margin: 0 0 25px 0;
-}
-a {
-  border-bottom-color: #ccc;
-}
-hr {
-  margin: 20px 0;
-  height: 2px;
-}
-ul li {
-  list-style: circle;
-}
+
 .header {
   background: #f5f5f5;
 }
@@ -1750,7 +1732,7 @@ ul li {
   display: block;
   overflow: hidden;
   margin: 0 auto;
-  width: 75%;
+  width: 100%;
 }
 @media (max-width: 767px) {
   .logo-line-before,
@@ -2305,7 +2287,7 @@ img.alignright {
 .person-info-content {
  text-align: center;
  padding-top: 60px;
- min-height:600px;
+ min-height:500px;
 }
 .person-info-content a{
 	position: relative;
@@ -2347,4 +2329,37 @@ img.alignright {
     padding: 8px 18px 8px 12px;
     margin: 0px 0;
     float: right;
+}
+.HT_line{
+	margin-top: 15px;
+    background-position: 0 -76px;
+    height: 1px;
+    width: 90%;
+    margin: 0 auto;
+    background-image: url(../images/default/linebg.png);
+    background-repeat: repeat-x;
+}
+.Blog_tit1 {
+    background-position: 0 -154px;
+    height: 25px;
+    line-height: 25px;
+    padding: 0 10px;
+    font-weight: bold;
+}
+.Blog_left2 {
+    margin-top: 8px;
+    padding-bottom: 10px;
+}
+
+.Blog_left2_1 {
+    width: 190px;
+    margin: 8px auto;
+}
+.Blog_p4 {
+    width: 190px;
+    margin: 15px 0 12px;
+}
+.Blog_left2_1 li {
+    margin-bottom: 12px;
+    padding-left: 24px;
 }
